# penwheel

./: .gitignore  .gitmodules  CMakeLists.txt  main_window.cpp  main_window.h
pen_wheel/: CMakeLists.txt  main.cpp  pen_wheel.cpp  pen_wheel.h
pen_wheel/config/: pen_wheel_action.cpp  pen_wheel_action.h  pen_wheel_color.cpp  pen_wheel_color.h  pen_wheel_config.cpp  pen_wheel_config.h  pen_wheel_key_combination.cpp  pen_wheel_key_combination.h
pen_wheel/utils/: key_sender.cpp  key_sender.h  mouse_events.cpp  mouse_events.h  processes.cpp  processes.h  processes_mac.mm
pen_wheel/widgets/: wheel_widget.cpp  wheel_widget.h  wheel_widget.ui
pen_wheel/windows/: main_window.cpp  main_window.h  main_window.ui  pen_wheel_window.cpp  pen_wheel_window.h  pen_wheel_window.ui  wheel.cpp  wheel.h  wheel.ui
res/: default_config.yaml  default_config.yml
